<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AddRemembranceActivity">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <EditText
            android:id="@+id/add_remembrance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:maxWidth="120sp"
            android:maxLines="2"
            android:hint="@string/enter_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="no"
            android:inputType="textMultiLine"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/add_remembrance_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_remembrance_title"
            app:layout_constraintVertical_bias="1">

            <TextView
                android:id="@+id/emoji_happy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="9dp"
                android:textSize="28dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/happy"/>
            <TextView
                android:id="@+id/emoji_lovely"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="9dp"
                android:textSize="28dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/lovely"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/emoji_loved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="9dp"
                android:textSize="28dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/loved"/>
            <TextView
                android:id="@+id/emoji_sad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="9dp"
                android:textSize="28dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sad"/>
            <TextView
                android:id="@+id/emoji_desperate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="9dp"
                android:textSize="28dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/desperate"/>
            <TextView
                android:id="@+id/emoji_angry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="9dp"
                android:textSize="28dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/angry"/>
            <TextView
                android:id="@+id/emoji_shocked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="9dp"
                android:textSize="28dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/shocked"/>


        </LinearLayout>

        <EditText
            android:id="@+id/add_remembrance_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:hint="@string/enter_location"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.892"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/add_remembrance_content"
            android:layout_width="344dp"
            android:layout_height="69dp"
            android:layout_marginTop="132dp"
            android:hint="@string/enter_content"
            app:flow_wrapMode="aligned"
            android:textAlignment="center"
            android:paddingLeft="22sp"
            android:paddingRight="22sp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"/>

        <EditText
            android:id="@+id/add_remembrance_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="328dp"
            android:autofillHints="no"
            android:hint="@string/enter_password_optional"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_remembrance_content" />

        <Button
            android:id="@+id/remembrance_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_remembrance_password"
            app:layout_constraintVertical_bias="0.091" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
