<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ViewRemembranceActivity">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:id="@+id/remembrance_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:text="DELETE"
            app:layout_constraintBottom_toTopOf="@+id/remembrance_generate_pdf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_remembrance_content"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/remembrance_generate_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="444dp"
            android:text="GENERATE PDF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_remembrance_content"
            app:layout_constraintVertical_bias="0.103" />

        <Button
            android:id="@+id/remembrance_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="32dp"
            android:text="SHARE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.682"
            app:layout_constraintStart_toEndOf="@+id/remembrance_delete"
            app:layout_constraintTop_toBottomOf="@+id/view_remembrance_content"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/remembrance_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="400dp"
            android:text="UPDATE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/remembrance_delete"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_remembrance_content"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/view_remembrance_title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/title_example"
            android:textAlignment="center"
            android:textSize="70px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/view_remembrance_mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/def_mood"
            app:layout_constraintBottom_toTopOf="@+id/view_remembrance_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_remembrance_title"
            app:layout_constraintVertical_bias="0.0">

        </EditText>

        <EditText
            android:id="@+id/view_remembrance_location"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/location"
            android:textSize="40px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.951"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_remembrance_title" />

        <TextView
            android:id="@+id/view_remembrance_date"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="40px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_remembrance_title" />

        <EditText
            android:id="@+id/view_remembrance_content"
            android:paddingLeft="50px"
            android:paddingRight="50px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:background="@android:color/transparent"
            android:inputType="textMultiLine"
            android:hint="Enter Content Here"
            android:textSize="40px"
            app:flow_wrapMode="aligned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
